# Cemu-Android

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: android_build.yml  deploy_release_android.yml
src/: CMakeLists.txt
src/Cafe/: CMakeLists.txt  CafeSystem.cpp  CafeSystem.h
src/Cafe/GameProfile/: GameProfile.h
src/Cafe/TitleList/: TitleInfo.cpp  TitleList.cpp
src/Cemu/GuiSystem/: GuiSystem.cpp
src/Cemu/Logging/: CemuLogging.h
src/Common/: CMakeLists.txt  cpu_features.cpp  cpu_features.h  precompiled.h
src/Common/unix/: ContentUriStream.h  FileStream_contentUri.cpp  FileStream_contentUri.h
src/android/app/: build.gradle
src/android/app/src/main/cpp/: AndroidFilesystemCallbacks.h  AndroidGameTitleLoadedCallback.h  AndroidSwkbdCallbacks.cpp  AndroidSwkbdCallbacks.h  CMakeLists.txt  CafeSystemUtils.cpp  CafeSystemUtils.h  EmulationState.h  GameTitleLoader.cpp  GameTitleLoader.h  Image.cpp  Image.h  JNIUtils.cpp  JNIUtils.h  NativeEmulation.cpp  NativeGameTitles.cpp  NativeGraphicPacks.cpp  NativeInput.cpp  NativeLib.cpp  NativeSettings.cpp  NativeSwkbd.cpp  native-lib.cpp
src/asm/: CMakeLists.txt
src/config/: CemuConfig.cpp  CemuConfig.h  LaunchSettings.cpp
src/gui/: CMakeLists.txt  CemuApp.cpp  GeneralSettings2.cpp  MainWindow.cpp  PadViewFrame.cpp
src/gui/components/: wxGameList.cpp
src/gui/helpers/: wxHelpers.h
src/gui/input/: InputAPIAddWindow.cpp  InputAPIAddWindow.h  InputSettings2.cpp
src/input/: InputManager.h
src/input/emulated/: EmulatedController.h  VPADController.cpp
src/util/: CMakeLists.txt
(+143 files in other folders)
